--- a/Style/Style.css
+++ b/Style/Style.css
@@ -55,3 +55,27 @@ header a{
     margin: 5px 0 0 10px;
    
 }
+
+.hero{
+    border: solid;
+    width: 1136px;
+    
+}
+
+.hero_bottom{
+    border: solid;
+    display: inline-flex;
+    width: 1136px;
+    height: 124px;
+    justify-content: space-evenly;
+    align-items: center;
+   
+
+}
+
+.hero_options{
+    border: solid 1px;
+   width: 164px;
+
+}
+
