--- a/Style/Style.css
+++ b/Style/Style.css
@@ -614,7 +614,7 @@ header a{
 }
 
 .container{
-    border-bottom: solid blue;
+    border-bottom: solid white 1px;
     display: flex;
     width: 100vw;
     height: 370px;
@@ -662,7 +662,123 @@ header a{
     padding-top: 34px; 
 }
 
-.textfield img{
-    border: solid;
-    background-color: black;
+#precos{
+    width: 190px;
+    height: 158px;
+    margin: 54px 74px 0 0;
+}
+
+#precos h4{
+    width: 63px;
+    height: 40px;
+    font-size: 18px;
+}
+
+#planos{
+    width: 51px;
+    height: 40px;
+    font-size: 16px;
+}
+
+#como_comprar{
+    width: 183px;
+    height: 40px;
+    font-size: 16px;
+}
+
+#contatos{
+    width: 106px;
+    height: 90px;
+    margin: 54px 74px 0 0;
+}
+
+#contatos h4{
+    width: 74px;
+    height: 40px;
+    font-size: 18px;
+}
+
+#institucional{
+    width: 175px;
+    height: 158px;
+    margin: 54px 74px 0 0;
+}
+
+#institucional h4{
+    width: 115px;
+    height: 40px;
+    font-size: 18px;
+}
+
+.textfield{
+    width: 290px;
+    height: 135px;
+    margin-top: 54px; 
+}
+
+.textfield h4{
+    color: white;
+    width: 224px;
+    height: 40px;
+    font-size: 18px;
+}
+
+.input{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    width: 300px;
+    height: 45px;
+    padding: 5px 0 5px 5px;
+    margin-top: 20px;
+    border-radius: 6px;
+    background-color: white;
+}
+
+.input img{
+    cursor: pointer;
+    width: 19px;
+    height: 10;
+    margin-right: 15px;
+}
+
+input{
+    width: 290px;
+    height: 40px;
+    border-radius: 6px;
+    background-color: transparent;
+    border: none;
+    color: black;
+    font-size: 14px;
+}
+
+input:focus{
+    outline: none;
+}
+
+input::placeholder{
+    padding-left: 24px;
+    width: 44px;
+    height: 25px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #71809E;
+}
+
+.bottom{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 10vh;
+    background-color: #111826;
+}
+
+.bottom h5{
+    width: 145px;
+    height: 40px;
+    font-size: 14px;
+    font-weight: 300;
+    color: white;
+    padding-top: 10px;
 }
