--- a/Style/Style.css
+++ b/Style/Style.css
@@ -25,17 +25,22 @@ header{
     justify-content: space-between;  
 }
 
+header a{
+    color: #4c5d73;
+    text-decoration: none;
+    font-size: 16px;
+}
+
 
 .tittle{
 margin: 10px 134px 10px 72px;
 }
 
 .options{
-    width: 455px;
+    width: 650px;
     height: 19px;
     display: inline-flex;
-    justify-content: space-between;
-    
+    justify-content: space-evenly;   
 }
 
 .a_options{
@@ -44,17 +49,13 @@ margin: 10px 134px 10px 72px;
    margin-right: 50px; 
 }
 
-#sobre_nos{
-    width: 75px;
-    height: 19px;
-}
+#sobre{
+    width: 80px;
+ }
 
-header a{
-    color: #4c5d73;
-    text-decoration: none;
-    font-size: 16px;
-}
-
+ #serv{
+     padding-right: px;
+ }
 .cadastre-se a{
     color: #304f8c;
     margin-right: 24px;
@@ -424,10 +425,12 @@ header a{
 
 #bares{
     padding-left: 109px;
+    padding-top: 23px;
 }
 
 #restaurantes{
     padding-left: 76px;
+
 }
 
 #mercearias{
@@ -545,21 +548,41 @@ header a{
 
 #popular{
     background-color: #304F8C;
-    border: solid 1px;
+    border: none;
     border-radius: 10px;
+    margin-bottom: 40px;
 }
 
 #essencial{
     width: 75px;
     height: 30px;
     font-size: 17px;
-    font-weight: 400;
+    font-weight: 300;
     color: #ffffff;
     margin-left: 24px;
+    padding-top: 25px;
 }
 
 #popular img{
     margin-left: 24px;
+    margin-top: 20px;
+}
+
+#popu{
+    width: 137px;
+    height: 37px;
+    border-radius: 100px; 
+    font-size: 16px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 87px;
+    top: 2475px;
+    left: 1024px;
+    color: #304f8c;
+    background-color: #94f2e9;
+    position: absolute;
 }
 
 #popular p{
@@ -602,20 +625,28 @@ header a{
     margin-top: 64px;
 }
 
-#planos_img{
-    width: 770px;
-    height: 425.8px;
-    margin-left: 255px;
+
+
+.comentarios{
+    width: 100vw;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#planos_img img{
-    width: 770px;
-    height: 392px;
+.comentarios img{
+    width: 780px;
+    height: 450px;
+    margin-bottom: 96px;
+    margin-top: 77px;
 }
+
+
 
 .container{
     border-bottom: solid white 1px;
     display: flex;
+    justify-content: space-evenly;
     width: 100vw;
     height: 370px;
     background-color: #111826;
@@ -639,13 +670,13 @@ header a{
 
 #recursos{
     width: 97px;
-    height: 226px;
-    margin: 54px 74px 77px 72px;
+    height: 220px;
+    margin: 54px 0px 77px 72px;
 }
 
 #recursos h4{
     width: 85px;
-    height: 40px;
+    height: 30px;
     font-size: 18px;
 }
 
@@ -665,12 +696,12 @@ header a{
 #precos{
     width: 190px;
     height: 158px;
-    margin: 54px 74px 0 0;
+    margin: 54px 0px 0 0;
 }
 
 #precos h4{
     width: 63px;
-    height: 40px;
+    height: 30px;
     font-size: 18px;
 }
 
@@ -689,24 +720,24 @@ header a{
 #contatos{
     width: 106px;
     height: 90px;
-    margin: 54px 74px 0 0;
+    margin: 54px 0px 0 0;
 }
 
 #contatos h4{
     width: 74px;
-    height: 40px;
+    height: 30px;
     font-size: 18px;
 }
 
 #institucional{
     width: 175px;
     height: 158px;
-    margin: 54px 74px 0 0;
+    margin: 54px 0px 0 0;
 }
 
 #institucional h4{
     width: 115px;
-    height: 40px;
+    height: 30px;
     font-size: 18px;
 }
 
@@ -719,8 +750,12 @@ header a{
 .textfield h4{
     color: white;
     width: 224px;
-    height: 40px;
+    height: 30px;
     font-size: 18px;
+}
+
+.textfield img{
+    margin-top: 15px;
 }
 
 .input{
@@ -740,6 +775,7 @@ header a{
     width: 19px;
     height: 10;
     margin-right: 15px;
+    margin-bottom: 16px;
 }
 
 input{
@@ -750,6 +786,7 @@ input{
     border: none;
     color: black;
     font-size: 14px;
+    padding-left: 10PX;
 }
 
 input:focus{
@@ -770,7 +807,7 @@ input::placeholder{
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 10vh;
+    height: 5vh;
     background-color: #111826;
 }
 
@@ -780,5 +817,5 @@ input::placeholder{
     font-size: 14px;
     font-weight: 300;
     color: white;
-    padding-top: 10px;
+    padding: 12px 0;
 }
