refactor: alinhando os itens do .atuacao_options

--- a/Style/Style.css
+++ b/Style/Style.css
@@ -430,15 +430,19 @@ margin: 10px 134px 10px 72px;
 
 #restaurantes{
     padding-left: 76px;
+    margin-top: 23px;
+    
 
 }
 
 #mercearias{
     padding-left: 87px;
+    margin-top: 23px;
 }
 
 #adegas{
     padding-left: 102px;
+    margin-top: 23px;
 }
 
 
